--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/browser-kit": "^6.0 || ^7.0",
         "symfony/css-selector": "^6.0 || ^7.0",
         "symfony/http-client": "^6.0 || ^7.0",
-        "symfony/mime": "^6.0 || ^7.0"
+        "symfony/mime": "^6.0 || ^7.0",
+        "bvp/converter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
